practice on layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,38 @@
                 </article>
             </div>
         </section>
+        <section class='features'>
+            <h1 class='plans__title'>Many Good Reasons to Stick Around</h1>
+            <ul class='features__list'>
+                <li class='features__item'>
+                    <div class='features__img'>
+
+                    </div>
+                    <p class='features__description'>2,857,00 Trusting Customers</p>
+                </li>
+                <li class='features__item'>
+                    <div class='features__img'>
+
+                    </div>
+                    <p class='features__description'>99.999% Uptime Guarantee</p>
+                </li>
+                <li class='features__item'>
+                    <div class='features__img'>
+
+                    </div>
+                    <p class='features__description'>Lighting Fast CDN</p>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer class="footer">
+        <nav class="footer__nav">
+            <ul class="footer__list">
+                <li class='footer__item'><a href="#" class='footer__link'>Support</a></li>
+                <li class='footer__item'><a href="#" class='footer__link'>Terms of Use</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 
 <script src="main.js"></script>
