practice on positioning

--- a/packages/index.html
+++ b/packages/index.html
@@ -28,6 +28,7 @@
         <section class='plans plans--plus'>
             <a href="#">
                 <h1 class='plans__titles'>Our Plus Plan</h1>
+                <h2 class="plans__badge">RECOMMENDED</h2>
                 <h2 class="plans__subtitle">The most popular choice of our customers</h2>
                 <p class='plans__txt'>benefit from increased storage and faster support to ensure that your mission-critical data and applications are always available!</p>
             </a>
@@ -39,7 +40,7 @@
                 <p class='plans__txt'>Get started immediatly at zero cost!</p>
             </a>
         </section>
-        <section class='plans plans--premium'>
+        <section class='plans plans--premium clearfix'>
             <a href="#">
                 <h1 class='plans__titles'>Our PREMIUM Plan</h1>
                 <h2 class="plans__subtitle">An extremely solid start into our hosting world.</h2>
