--- a/packages/index.html
+++ b/packages/index.html
@@ -7,23 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="css/packages.css">
+    <link rel="stylesheet" href="../css/queries.css">
 </head>
 <body>
+    <div class="background"></div>
     <header class="header">
         <div class='logo'>
-            <a href="index.html" class="logo__brand">
-                uHost
+                <button class="toggle-button">
+                        <span class="toggle-button__bar"></span>
+                        <span class="toggle-button__bar"></span>
+                        <span class="toggle-button__bar"></span>
+                    </button>
+            <a href="../index.html" class="logo__brand">
+                <img src="../img/uhost-icon.png" alt="logo">
             </a>
         </div>
         <nav class="nav">
             <ul class='nav__list'>
-                <li class="nav__items"><a href="../Packages/index.html" class='nav__links'>Packages</a></li>
+                <li class="nav__items"><a href="../packages/index.html" class='nav__links'>Packages</a></li>
                 <li class="nav__items"><a href="../customers/index.html" class='nav__links'>Customers</a></li>
-                <li class="nav__items nav__items--cta"><a href="../start-hosting/index.html" class='nav__links'>Start Hosting</a></li>
+                <li class="nav__items nav__items--cta"><a href="../index.html" class='nav__links'>Start Hosting</a></li>
             </ul>
         </nav>
     </header>
+    <div class="modal">
+            <h1 class="modal__title">do you want to continue?</h1>
+            <div class="modal__actions">
+                <a href="index.html" class="modal__action">Yes!</a>
+                <a href="index.html" class="modal__action modal__action--negative">No!</a>
+            </div>
+        </div>
+        <div class="backdrop"></div>
+        <nav class="mobile-nav">
+                <ul class="mobile-nav__items">
+                <li class="mobile-nav__item">
+                    <a href="../packages/index.html">Packages</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../customers/index.html">Customers</a>
+                </li>
+                <li class="mobile-nav__item mobile-nav__item--cta">
+                    <a href="../index.html">Start Hosting</a>
+                </li>
+            </ul>
+        </nav>
     <main class='main'>
         <section class='plans plans--plus'>
             <a href="#">
@@ -58,6 +87,6 @@
     </footer>
 
 
-<script src="main.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
